<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Na Roda do Samba</string>
    <string name="title_activity_maps">Mapa de Eventos</string>
    <string name="pref_first_launch_key">first-launch</string>
    <string name="pref_first_launch_default">true</string>
    <string name="pref_user_id_key">user_id</string>
    <string name="pref_user_id_default">-1</string>
    <string name="pref_user_region_id_key">region_id</string>
    <string name="pref_user_region_id_default">-1</string>
    <string name="pref_user_age_group_id_key">age_group_id</string>
    <string name="pref_user_age_group_id_default">-1</string>
    <string name="pref_user_sex_key">sex</string>
    <string name="pref_user_sex_default">m</string>
    <string name="title_activity_user_registration">Criação de Usuário</string>
    <string name="user_registration_title">Queremos saber um pouco mais sobre você.</string>
    <string name="region_text">Região</string>
    <string name="sex_text">Sexo</string>
    <string name="age_group_text">Faixa etária</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="user_created_success">Muito bem, vamos sambar?</string>
    <string name="user_created_failed">Algo deu errado, por favor tente mais tarde.</string>
    <string name="data_being_send">Enviando os dados ao servidor...</string>
    <string name="info_window_plus">+ informações</string>
    <string name="title_activity_events_list">Lista de Eventos</string>
    <string name="title_activity_event_show">EventShowActivity</string>
    <string name="menu_item_list">Lista</string>
    <string name="menu_item_map">Mapa de Eventos</string>
    <string name="menu_item_settings">Configurações</string>
    <string name="menu_item_share">Compartilhar</string>
    <string name="menu_item_navigate">Ir pro samba</string>
    <string name="menu_item_about">Sobre</string>
    <string name="menu_item_logout">Sair</string>
    <string name="menu_item_filter">Filtrar</string>
    <string name="search">Pesquisar...</string>
    <string name="loading">Carregando...</string>
    <string name="search_empty">Nenhum resultado foi encontrado.</string>
    <string name="lorem_ipsum">Sed at tristique mi, et tempus quam. Nulla vulputate lectus nec urna volutpat lacinia. Praesent vestibulum ipsum id diam tempus semper. Interdum et malesuada fames ac ante ipsum primis in faucibus.</string>
    <string name="next">Próximo</string>
    <string name="title_activity_events_map_info">Detalhes do Evento</string>
    <string name="title_activity_not_connected">Não Conectado</string>
    <string name="not_connected_warning">Ops! Você não está conectado...</string>
    <string name="try_again">Tentar novamente</string>
    <string name="user_registration_post_button">PRONTO</string>
    <string name="menu_item_refresh">Atualizar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="event_show_address">Endereço</string>
    <string name="event_show_description">Descrição</string>
    <string name="event_show_ticket">Entrada</string>
    <string name="event_show_drink">Bebidas</string>
    <string name="event_show_calendar">Próximos Eventos</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Abrir menu</string>
    <string name="drawer_close">Fechar menu</string>
    <string-array name="nav_drawer_items">
        <item>@string/menu_item_map</item>
        <item>@string/menu_item_list</item>
        <item>@string/menu_item_settings</item>
        <item>@string/menu_item_about</item>
        <item>@string/menu_item_logout</item>
    </string-array>
    <string name="about_text">Encontre no Rio de Janeiro as rodas de samba mais próximas de você.\n\nO App Na Roda do Samba nasce para ajudar na diversão e no prazer de estar presente à uma roda de samba.\n\nQueremos que antes de sair de casa ou do trabalho o sambista já tenha as informações necessárias para programar a sua experiência no mundo do Samba.\n\nCom a explosão do número de Rodas de Samba, o app Na Roda do Samba apresenta a localização, preço da entrada e as caraterísticas e atrações de cada uma das dezenas de rodas de samba e pagode espalhadas pelo Grande Rio.\n\nEsse aplicativo e uma ação complementar a série televisiva Na Roda do Samba, produzido pela Ventura Filmes, e visa apresentar e ampliar a experiência do Samba no Rio de Janeiro.\n\nQuer incluir sua roda de samba no aplicativo? Entre em contato.</string>
    <string name="developer_info">Desenvolvido por Diego Cardoso e Vinícius Ribeiro</string>
    <string name="show_event_details">Detalhes do Evento</string>
    <string name="filter_title">Filtrar eventos por...</string>
    <string name="filter_name">Nome da Roda</string>
    <string name="filter_date">Data do Evento</string>
    <string name="filter_date_today">Hoje</string>
    <string name="filter_date_this_week">Esta semana</string>
    <string name="filter_date_this_month">Este mês</string>
    <string name="filter_apply">Filtrar</string>
    <string name="filter_clean">Limpar filtro</string>

    <string name="user_save_on_progress">Salvando as suas alterações...</string>
    <string name="user_save_done">Usuário salvo!</string>
    <string name="user_save_failed_trying">Falha ao salvar. Tentando novamente...</string>
    <string name="user_save_failed_try_later">Falha ao salvar. Tente novamente mais tarde.</string>
    <string name="publish_event">Publicar minha roda!</string>

    <string name="splash_realization">Realização</string>
    <string name="splash_support">Apoio</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="common_google_play_services_network_error_text">Uma conexão de dados é requerida para conectar ao Google Play services.</string>
    <string name="facebook_app_id">1661175424199412</string>
    <string name="continue_how_visitant">Continuar como visitante</string>

    <!-- Strings related to logout -->
    <string name="message_logout">Tem certeza que deseja sair?</string>
    <string name="yes_logout">Sim</string>
    <string name="no_logout">Não</string>

</resources>
